--- a/index.html
+++ b/index.html
@@ -250,13 +250,13 @@
                             腕表/眼睛/珠宝饰品
                         </a>
                     </li>
-                    <li class="menu-list" color="orange">
+                    <li class="menu-list" color="pink">
                         <i class="iconfont">&#xe606;</i>
                         <a href="">
                             手机/数码/电脑办公
                         </a>
                     </li>
-                    <li class="menu-list" color="orange">
+                    <li class="menu-list" color="purple">
                         <i class="iconfont">&#xe604;</i>
                         <a href="">
                             母婴玩具
@@ -304,7 +304,7 @@
                             医药保健
                         </a>
                     </li>
-                    <li class="menu-list" color="green">
+                    <li class="menu-list" color="greenyellow">
                         <i class="iconfont">&#xe60a;</i>
                         <a href="">
                             厨具/收纳/宠物
@@ -1028,9 +1028,9 @@
                         <div class="cons-list">
                             <div class="conlists">
                                 <div class="conlistsList">
-                                    <div class="conlistsLeft">当季流行 &gt;</div>
+                                    <div class="conlistsLeft">母婴用品 &gt;</div>
                                     <div class="conlistsRIght">
-                                        <span class="listcolor">女装新品</span>
+                                        <span class="listcolor">母婴新品</span>
                                         <span>商场同款</span>
                                         <span class="listcolor">仙女连衣裙</span>
                                         <span>T恤</span>
